Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,7 +2,8 @@ variables:
   DEVELOPER_DIR: "/Applications/Xcode_9.3.1.app"
 jobs:
 - job: build_osx
-  pool: vmImage: "macOS-10.13"
+  pool:
+    vmImage: "macOS-10.13"
   timeoutInMinutes: 10
   steps:
   - script: echo hello world
