--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -44,7 +44,9 @@ jobs:
     displayName: publish wxWidgets
 - job: deploy
   steps:
-  - script: echo nothing to do now
+  - script: |
+      echo download artifacts
+      ls -laR ./ext
     displayName: deploy script
   dependsOn: build_osx
   condition: succeeded()
