--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -44,6 +44,9 @@ jobs:
     displayName: publish wxWidgets
 - job: deploy
   steps:
+  - script: |
+      echo "cache name : $WXWIDGETS_CACHE" 
+    displayName: show cache name
   # 必ず存在するはず
   - task: DownloadBuildArtifacts@0
     inputs:
@@ -54,7 +57,6 @@ jobs:
       artifactName: $WXWIDGETS_CACHE
       downloadType: specific
       downloadPath: ./ext/wxWidgets/build_release
-    condition: ne(variables['FORCE_REBUILD'], 'true')
     displayName: download wxwidgets cache
   - script: |
       echo download artifacts
