Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -57,6 +57,7 @@ jobs:
       project: "Terra"
       pipeline: "azure-pipeline-test-ci"
       buildVersionToDownload: latest
+      allowPartiallySucceededBuilds: true
       artifactName: $(WXWIDGETS_CACHE)
       downloadType: specific
       downloadPath: ./ext/wxWidgets/build_release
