--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,10 +32,11 @@ jobs:
         echo "build wxWidgets"
         mkdir -p "./ext/wxWidgets/build_release"
         echo "dummy contents for wxWidgets" > "./ext/wxWidgets/build_release/dummy.txt"
-        echo "##vso[task.setvariable variable=SHOULD_UPLOAD_WXWIDGETS]true"
+        echo "##vso[task.setvariable variable=SHOULD_UPLOAD_WXWIDGETS,isOutput=true]true"
       else
         echo "use cached wxWidgets"
       fi
+    name: build_wxwidgets
     displayName: build wxWidgets
   - task: PublishBuildArtifacts@1
     inputs:
@@ -52,6 +53,7 @@ jobs:
       echo "cache name : $WXWIDGETS_CACHE" 
     displayName: show cache name
   # 必ず存在するはず
+  # 成功ビルドからしか持ってこれない
   - task: DownloadBuildArtifacts@0
     inputs:
       buildType: specific
@@ -62,7 +64,16 @@ jobs:
       artifactName: $(WXWIDGETS_CACHE)
       downloadType: single
       downloadPath: ./ext/wxWidgets/build_release
-    displayName: download wxwidgets cache
+    displayName: download wxwidgets cache from a successful build
+    condition: ne(dependencies.build_osx.outputs['build_wxwidgets.SHOULD_UPLOAD_WXWIDGETS'], 'true')
+  - task: DownloadBuildArtifacts@0
+    inputs:
+      buildType: current
+      artifactName: $(WXWIDGETS_CACHE)
+      downloadType: single
+      downloadPath: ./ext/wxWidgets/build_release
+    displayName: download wxwidgets cache from current build
+    condition: eq(dependencies.build_osx.outputs['build_wxwidgets.SHOULD_UPLOAD_WXWIDGETS'], 'true')
   - script: |
       echo download artifacts
       ls -laR ./ext
