--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,7 +32,7 @@ jobs:
         echo "build wxWidgets"
         mkdir -p "./ext/wxWidgets/build_release"
         echo "dummy contents for wxWidgets" > "./ext/wxWidgets/build_release/dummy.txt"
-        echo "##vso[task.setvariable variable=SHOULD_UPLOAD_WXWIDGETS,isOutput=true]true"
+        echo "##vso[task.setvariable variable=SHOULD_UPLOAD_WXWIDGETS;isOutput=true]true"
       else
         echo "use cached wxWidgets"
       fi
