--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,7 +11,7 @@ jobs:
   - script: echo second script line
     displayName: script2
   - script: |
-      echo "##vso[task.setvariable variable=WXWIDGETS_CACHE]wxwigets_cache_abcdefg"
+      echo "##vso[task.setvariable variable=WXWIDGETS_CACHE]wxwigets_cache_abcde"
     displayName: collect hashes
   - task: DownloadBuildArtifacts@0
     inputs:
@@ -49,7 +49,7 @@ jobs:
     SHOULD_UPLOAD_WXWIDGETS: $[ dependencies.build_osx.outputs['build_wxwidgets.SHOULD_UPLOAD_WXWIDGETS'] ]
   steps:
   - script: |
-      echo "##vso[task.setvariable variable=WXWIDGETS_CACHE]wxwigets_cache_abcdefg"
+      echo "##vso[task.setvariable variable=WXWIDGETS_CACHE]wxwigets_cache_abcde"
     displayName: collect hashes
   - script: |
       echo "cache name : $WXWIDGETS_CACHE" 
