--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,6 +10,16 @@ jobs:
     displayName: script1
   - script: echo second script line
     displayName: script2
+  - template: ci/cache_products.yml
+    parameters:
+      targetName: "wxWidgets"
+      targetPath: "./ext/wxWidgets"
+      targetHash: "abcde"
+  - template: ci/cache_products.yml
+    parameters:
+      targetName: "Protocol Buffer"
+      targetPath: "./ext/protobuf"
+      targetHash: "fghij"
   - script: |
       echo "##vso[task.setvariable variable=WXWIDGETS_CACHE]wxwigets_cache_abcde"
     displayName: collect hashes
